force-app/main/default/objects/Activity/fields/Escalation_Task__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalation Task</label>
    <type>Checkbox</type>
</CustomField>