force-app/main/default/objects/Activity/fields/NS_Activity_Description__c.field-meta.xml
<CustomField>
    <fullName>NS_Activity_Description__c</fullName>
    <label>Activity Description</label>
    <type>TextArea</type>
</CustomField>