force-app/main/default/objects/Activity/fields/NS_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>NS_Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Review</fullName>
            </value>
            <value>
                <fullName>Competitive Intel</fullName>
            </value>
            <value>
                <fullName>Equipment issues</fullName>
            </value>
            <value>
                <fullName>IM Development</fullName>
            </value>
            <value>
                <fullName>Market Intel</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Service Issues</fullName>
            </value>
            <value>
                <fullName>Weather Related</fullName>
            </value>
            <value>
                <fullName>NPO Approval</fullName>
            </value>
            <value>
                <fullName>Mergers/Acquisitions</fullName>
            </value>
            <value>
                <fullName>Capacity Expansions/New Plants</fullName>
            </value>
            <value>
                <fullName>Plant Closures</fullName>
            </value>
            <value>
                <fullName>Plant Outages</fullName>
            </value>
            <value>
                <fullName>Personnel Changes</fullName>
            </value>
            <value>
                <fullName>Invoicing/Billing</fullName>
            </value>
            <value>
                <fullName>Storage/Demurrage/Ancillary Charges</fullName>
            </value>
            <value>
                <fullName>Forecasts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>