force-app/main/default/objects/Activity/fields/NS_CallDuration__c.field-meta.xml
<CustomField>
    <fullName>NS_CallDuration__c</fullName>
    <description>Capture the duration of CTI Call</description>
    <label>Call Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>