force-app/main/default/objects/Activity/fields/NS_CallTime__c.field-meta.xml
<CustomField>
    <fullName>NS_CallTime__c</fullName>
    <defaultValue>TIMEVALUE(NOW()-(1/24)* $User.NSSales_TimeDelta__c )</defaultValue>
    <label>Call Time</label>
    <type>Time</type>
</CustomField>