force-app/main/default/objects/Activity/fields/NS_Due_Time__c.field-meta.xml
<CustomField>
    <fullName>NS_Due_Time__c</fullName>
    <label>Due Time</label>
    <type>Time</type>
</CustomField>