force-app/main/default/objects/Activity/fields/NS_Flag__c.field-meta.xml
<CustomField>
    <fullName>NS_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To distinguish between standard and custom Log a call tasks</description>
    <label>Flag for Log a Call</label>
    <type>Checkbox</type>
</CustomField>