force-app/main/default/objects/Activity/fields/NS_SubjectDummy__c.field-meta.xml
<CustomField>
    <fullName>NS_SubjectDummy__c</fullName>
    <defaultValue>&quot;Outbound Phone Call&quot;</defaultValue>
    <description>Dummy field to update the original subject field</description>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound Phone Call</fullName>
            </value>
            <value>
                <fullName>Inbound Radio Call</fullName>
            </value>
            <value>
                <fullName>Outbound Phone Call</fullName>
                <default>true</default>
                <label>Outbound Phone Call</label>
            </value>
            <value>
                <fullName>Outbound Radio Call</fullName>
            </value>
            <value>
                <fullName>In Person Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>