force-app/main/default/objects/Activity/fields/NSSales_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Call_Date__c</fullName>
    <label>Call Date</label>
    <type>Date</type>
</CustomField>